--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -10,6 +10,42 @@
     border-radius: 24px;
     display: flex;
 }
+
+.wrapper.theme-white .footer__inner {
+    background: #000;
+}
+.wrapper.theme-white .footer__inner * {
+    color: #FFF!important;
+}
+
+.wrapper.theme-yellow .footer__inner {
+    background: #000;
+}
+.wrapper.theme-yellow .footer__inner * {
+    color: #FFFF00!important;
+}
+
+.wrapper.theme-blue .footer__inner {
+    background: #133C58;
+}
+.wrapper.theme-blue .footer__inner * {
+    color: #9FD7FF!important;
+}
+
+.wrapper.theme-blackWhite .footer__inner {
+    background: #FFF;
+}
+.wrapper.theme-blackWhite .footer__inner * {
+    color: #000!important;
+}
+
+.wrapper.theme-blackGreen .footer__inner {
+    background: #A9DD38;
+}
+.wrapper.theme-blackGreen .footer__inner * {
+    color: #000!important;
+}
+
 .footer__left {
 }
 .footer-left__top {
